--- a/src/Components/Style/Id.css
+++ b/src/Components/Style/Id.css
@@ -7,6 +7,7 @@
     align-items: center;
     gap: 25px;
     padding-bottom: 50px;
+    justify-content: space-between;
 }
 
 .ganerate_id_check h3 {
@@ -182,4 +183,17 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.first-haft {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.teacherid_create {
+    padding: 10px 20px;
+    border: 1px solid;
+    border-radius: 5px;
+    font-size: 20px;
 }
