--- a/src/Components/Style/Complain.css
+++ b/src/Components/Style/Complain.css
@@ -15,6 +15,11 @@
   cursor: pointer;
 }
 
+.display-flex-com{
+  display: flex;
+  gap: 30px;
+}
+
 /* -----------------------   COMPLAIN BOX      --------------- */
 .complainType_main {
   max-width: 1300px;
@@ -187,7 +192,7 @@
   flex-shrink: 0;
   align-items: center;
   justify-content: space-between;
-  padding: 80px;
+  padding: 30px;
   border-bottom: var(--bs-modal-header-border-width) solid var(--bs-modal-header-border-color);
   border-top-left-radius: var(--bs-modal-inner-border-radius);
   border-top-right-radius: var(--bs-modal-inner-border-radius);
