--- a/src/Components/Style/Dashboard.css
+++ b/src/Components/Style/Dashboard.css
@@ -330,8 +330,8 @@
 .event-inner-sec {
     max-width: 798px;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
+    /* display: flex;
+    justify-content: space-between; */
     margin-bottom: 28px;
 
 }
@@ -376,7 +376,7 @@
 }
 
 .e1 {
-    max-width: 320px;
+    /* max-width: 320px; */
     width: 100%;
     padding: 12px 18px 16px 18px;
     background-color: #FFFFFF;
@@ -467,7 +467,7 @@ textarea {
 
 
 .event-cel {
-    max-width: 382px;
+    /* max-width: 382px; */
     width: 100%;
     background: #28A7E8;
     border-radius: 10px;
@@ -499,7 +499,7 @@ textarea {
 .s-date p {
     font-style: normal;
     font-weight: 400;
-    font-size: 10px;
+    font-size: 12px;
     line-height: 11px;
     color: #737373;
 }
