--- a/src/Components/Style/Exam.css
+++ b/src/Components/Style/Exam.css
@@ -48,6 +48,7 @@
     background: url(../Images/down-arrow.svg) no-repeat;
     background-position: right center;
     outline: none;
+    padding: 0 10px;
 }
 
 .exam_info .submit_part {
@@ -74,6 +75,10 @@
     font-size: 18px;
     line-height: 18px;
     color: #bf0000;
+}
+
+.plko{
+    display: flex;
 }
 
 @media only screen and (max-width:991px) {
