--- a/src/Components/Style/Id.css
+++ b/src/Components/Style/Id.css
@@ -8,6 +8,7 @@
     gap: 25px;
     padding-bottom: 50px;
     justify-content: space-between;
+    height: 50px;
 }
 
 .ganerate_id_check h3 {
@@ -196,4 +197,10 @@
     border: 1px solid;
     border-radius: 5px;
     font-size: 20px;
+}
+
+@media screen and (max-width:995px) {
+    .ganerate_id_check h3 {
+        font-size: 20px;
+    }
 }
