--- a/src/Components/Style/Result.css
+++ b/src/Components/Style/Result.css
@@ -157,13 +157,21 @@ ul li {
     width: 100%;
     border-radius: 0px;
     padding: 0.375rem 0 0.375rem 0.75rem !important;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .all-the-data {
     padding: 20px;
     display: flex;
-    justify-content: space-between;
     gap: 10px;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+}
+
+.delete-btn-r{
+    text-align: center;
+    padding: 10px 0;
 }
 
 .height-and {
