--- a/src/Components/Style/Exam.css
+++ b/src/Components/Style/Exam.css
@@ -77,8 +77,29 @@
     color: #bf0000;
 }
 
-.plko{
+.plko {
     display: flex;
+}
+
+.exam-section table,
+th,
+tr,
+td {
+    border: 1px solid #dddddd;
+}
+
+.exam-section table th {
+    padding: 10px 20px;
+    font-size: 22px;
+}
+
+.exam-section table td {
+    font-size: 18px;
+}
+
+.exam-section .breadcumb-active {
+    color: rgba(0, 0, 0, .88);
+    margin-left: 7px;
 }
 
 @media only screen and (max-width:991px) {
